Small layout bug fixed on the current version of UI

--- a/asset/style.css
+++ b/asset/style.css
@@ -18,18 +18,21 @@ body {
   width: 100%;
   height: 100vh;
 }
+ /*=============*/
+/* BASIC LAYOUTS */
+ /* ----------- */
 .wrapper {
   display: flex;
-  justify-content: center;
+  flex-flow: column;
+  justify-content: space-between;
   align-items: center;
   height: 100vh;
 }
 .main {
   width: 100%;
-  height: 90%;
-  margin: 10%;
-  position: relative;
+  padding: 10%;
 }
+/* ============= */
 header {
   text-align: center;
   font-size: 24rem;
@@ -69,8 +72,8 @@ input[type=text], input[type=password] {
 }
 input:focus {
   outline: 0;
-  border: 2px solid rgb(255, 255, 255);
-  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .1);
+  border: 2px solid rgb(233, 233, 233);
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .1);
 }
 input[type=submit] {
   border: 0;
@@ -79,14 +82,16 @@ input[type=submit] {
   cursor: pointer;
 }
 footer {
-  position: absolute;
-  bottom: 0;
+  margin-bottom: 2em;
   text-align: center;
   width: 100%;
 }
 a {
   text-decoration: none;
   color: var(--blue-link);
+}
+a:active {
+  text-decoration: underline;
 }
 .link-admin {
   color: var(--blue-link);
@@ -117,6 +122,10 @@ a {
   font-size: 1.2em;
   border-radius: 10px;
   margin: 0.5em 0 0.5em 0;
+}
+.btn:hover, .btn:active {
+  background-color: var(--blue-deep);
+  color: #ffffff;
 }
 .onebytwo {
   flex: 1 1 auto;
@@ -169,7 +178,7 @@ i {
   position: absolute;
   bottom: 0;
   background-color: #fefefe;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
   box-shadow: 0 8px 24px 0 rgba(0, 0, 0, .2);
   width: 100%; /* Could be more or less, depending on screen size */
 }
